--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
     <header class="display-flex justify-space-between align-center p-2">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Ben's Tech Blog</a>
+          <a class="navbar-brand" href="/">Tech Blog</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,13 +27,14 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
 
-              <!-- render login or logout -->
+              <!-- Conditionally render login or logout links -->
               {{#if logged_in}}
               <a class="nav-link" href="/dashboard">Dashboard</a>
               <a class="nav-link" id="logout" href="/">Logout</a>
               {{else}}
               <a class="nav-link" href="/signup">Sign up</a>
               <a class="nav-link" href="/login">Login</a>
+              {{!-- <a class="nav-link disabled" href="/logout">Logged out</a> --}}
               {{/if}}
 
             </div>
@@ -43,7 +44,7 @@
 
     </header>
     <main>
-      <!-- render the sub layout -->
+      <!-- Render the sub layout -->
       <div class="container justify-content-center">
      {{{ body }}}
       </div>
@@ -53,7 +54,7 @@
     </footer>
   </div>
 
-  <!-- render script for logged in users only -->
+  <!-- Render script for logged in users only -->
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
